Ansible managed warning added

--- a/templates/3.0/zabbix_proxy.conf.j2
+++ b/templates/3.0/zabbix_proxy.conf.j2
@@ -1,3 +1,4 @@
+# {{ ansible_managed }}
 # This is a configuration file for Zabbix proxy daemon
 # To get more information about Zabbix, visit http://www.zabbix.com
 
