--- a/templates/3.0/zabbix_server.conf.j2
+++ b/templates/3.0/zabbix_server.conf.j2
@@ -1,3 +1,4 @@
+# {{ ansible_managed }}
 # This is a configuration file for Zabbix server daemon
 # To get more information about Zabbix, visit http://www.zabbix.com
 
