--- a/templates/windows/zabbix_agentd-tls.conf.j2
+++ b/templates/windows/zabbix_agentd-tls.conf.j2
@@ -326,3 +326,120 @@ UnsafeUserParameters={{ zabbix_agent_UnsafeUserParameters }}
 {% for parameter in zabbix_agent_UserParameter_windows %}
 UserParameter={{ parameter }}
 {% endfor %}
+
+####### TLS-RELATED PARAMETERS #######
+
+### Option: TLSConnect
+#	How the agent should connect to server or proxy. Used for active checks.
+#	Only one value can be specified:
+#		unencrypted - connect without encryption
+#		psk         - connect using TLS and a pre-shared key
+#		cert        - connect using TLS and a certificate
+#
+# Mandatory: yes, if TLS certificate or PSK parameters are defined (even for 'unencrypted' connection)
+# Default:
+# TLSConnect=unencrypted
+
+TLSConnect={{ zabbix_agent_TLSConnect }}
+
+### Option: TLSAccept
+#	What incoming connections to accept.
+#	Multiple values can be specified, separated by comma:
+#		unencrypted - accept connections without encryption
+#		psk         - accept connections secured with TLS and a pre-shared key
+#		cert        - accept connections secured with TLS and a certificate
+#
+# Mandatory: yes, if TLS certificate or PSK parameters are defined (even for 'unencrypted' connection)
+# Default:
+# TLSAccept=unencrypted
+
+TLSAccept={{ zabbix_agent_TLSAccept }}
+
+### Option: TLSCAFile
+#	Full pathname of a file containing the top-level CA(s) certificates for
+#	peer certificate verification.
+#
+# Mandatory: no
+# Default:
+# TLSCAFile=
+
+{% if zabbix_agent_TLSCAFile %}
+TLSCAFile={{ zabbix_agent_TLSCAFile }}
+{% endif %}
+
+### Option: TLSCRLFile
+#	Full pathname of a file containing revoked certificates.
+#
+# Mandatory: no
+# Default:
+# TLSCRLFile=
+
+{% if zabbix_agent_TLSCRLFile %}
+TLSCRLFile={{ zabbix_agent_TLSCRLFile }}
+{% endif %}
+
+### Option: TLSServerCertIssuer
+#      Allowed server certificate issuer.
+#
+# Mandatory: no
+# Default:
+# TLSServerCertIssuer=
+
+{% if zabbix_agent_TLSServerCertIssuer %}
+TLSServerCertIssuer={{ zabbix_agent_TLSServerCertIssuer }}
+{% endif %}
+
+### Option: TLSServerCertSubject
+#      Allowed server certificate subject.
+#
+# Mandatory: no
+# Default:
+# TLSServerCertSubject=
+
+{% if zabbix_agent_TLSServerCertSubject %}
+TLSServerCertSubject={{ zabbix_agent_TLSServerCertSubject }}
+{% endif %}
+
+### Option: TLSCertFile
+#	Full pathname of a file containing the agent certificate or certificate chain.
+#
+# Mandatory: no
+# Default:
+# TLSCertFile=
+
+{% if zabbix_agent_TLSCertFile %}
+TLSCertFile={{ zabbix_agent_TLSCertFile }}
+{% endif %}
+
+### Option: TLSKeyFile
+#	Full pathname of a file containing the agent private key.
+#
+# Mandatory: no
+# Default:
+# TLSKeyFile=
+
+{% if zabbix_agent_TLSKeyFile %}
+TLSKeyFile={{ zabbix_agent_TLSKeyFile }}
+{% endif %}
+
+### Option: TLSPSKIdentity
+#	Unique, case sensitive string used to identify the pre-shared key.
+#
+# Mandatory: no
+# Default:
+# TLSPSKIdentity=
+
+{% if zabbix_agent_TLSPSKIdentity is defined %}
+TLSPSKIdentity={{ zabbix_agent_TLSPSKIdentity }}
+{% endif %}
+
+### Option: TLSPSKFile
+#	Full pathname of a file containing the pre-shared key.
+#
+# Mandatory: no
+# Default:
+# TLSPSKFile=
+
+{% if zabbix_agent_TLSCRLFile %}
+TLSCRLFile={{ zabbix_agent_TLSCRLFile }}
+{% endif %}
